Add SEO for google

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Markdown typewriter</title>
     <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/0/05/Underwoodfive.jpg"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta name="description" content="Quickly write short notes with Markdown."/>
+    <meta name="keywords" content="Markdown editor"/>
+    <meta property="og:url" content="https://md-typewriter.vercel.app"/>
+    <meta property="og:title" content="Markdown typewriter"/>
+    <meta property="og:description" content="Quickly write short notes with Markdown."/>
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/0/05/Underwoodfive.jpg"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet"/>
 </head>
 <body>
     <div id="root"></div>
